# ModelViewer

./: .gitignore  CMakeLists.txt  ModelViewer.sln  README.md
ModelViewer/: Asset.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Chronometer.h  ColorProvider.cpp  ColorProvider.h  Component.cpp  Component.h  Config.cpp  Config.h  EmitterShape.cpp  EmitterShape.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EventDispatcher.h  FileUtils.cpp  FileUtils.h  Force.cpp  Force.h  Gradient.cpp  Gradient.h  Halfedge.cpp  Halfedge.h  IColorProvider.cpp  IColorProvider.h  Inspectable.h  LightManager.cpp  LightManager.h  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelViewer.vcxproj  (+33 more)
ModelViewer/shaders/: PBR0.frag  PBR0.vert  basic.vert  basic_lighting.frag  bg_grad.vert  blinn-phong.frag  blinn-phong.vert  gridShader.frag  gridShader.vert  lambertian.frag  lambertian.vert  matcap.frag  matcap.vert  normal.frag  particle_point.frag  particle_point.vert  selection.frag
assets/config/: config.yaml
assets/shaders/: PBR0.frag  PBR0.vert  basic_lighting.frag  bg_grad.frag  bg_grad.vert  gridShader.frag  gridShader.vert  hdr2cubemap.frag  hdr2cubemap.vert  lambertian.frag  lambertian.vert  light.frag  matcap.frag  matcap.vert  normal.vert  postProc.frag  postProc.vert  selection.frag  selection.vert  simpleShadow.frag  simpleShadow.vert  skybox.frag  skybox.vert  wireframe.frag  wireframe.vert
docs/: README.md  architecture.md  mermaid_test.md  roadmap.md
docs/adr/: 0000-template.md  0001-removing-god-classes.md  0002-start-graphics-work-with-shadow-mapping.md  0003-keep-project-docs-inside-repo.md  0004-migration-to-cmake-and-linux-port.md  0005-adding-renderitem-struct.md  0006-shadermanager-is-redundant.md  0007-render-target.md  0008-render-data.md  (+6 more)
include/: Asset.h  AssetManager.h  Builtin.h  Camera.h  Chronometer.h  ColorProvider.h  Component.h  Config.h  EmitterShape.h  Engine.h  Entity.h  EventDispatcher.h  FX.cpp  FX.h  Force.h  IInspectable.h  Inspectable.h  LightManager.h  Logger.h  Material.h  Mesh.h  Model.h  Mouse.h  Object.h  ParticleSystem.h  RenderComponent.h  RenderItem.h  Renderer.h  SceneManager.h  Shader.h  ShaderManager.h  Texture.h  Transform.h
src/: Chronometer.cpp  ColorProvider.cpp  Component.cpp  Config.cpp  EmitterShape.cpp  Engine.cpp  Entity.cpp  FX.cpp  FileUtils.cpp  Force.cpp  LightManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  Mouse.cpp  Object.cpp  ParticleSystem.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  Shader.cpp  Texture.cpp  Transform.cpp  UIManager.cpp  main.cpp
(+13 files in other folders)
